Address Paseto Sonar quality gate